--- a/index.html
+++ b/index.html
@@ -456,6 +456,28 @@
                             <use href="./img/icon.svg#icon-close"></use>
                         </svg>
                     </button>
+                    <!-- Form -->
+                    <form>
+                        <b>Оставьте свои данные, мы вам перезвоним</b>
+<br>
+                        <label for="use_name">Имя</label>
+                        <input type="name" name="name" id="use_name" placeholder="Ivan Ivanov" />
+                        
+<br>
+                        <label for="use_mail">Телефон</label>
+                        <input type="tel" name="tel" id="use_tel" placeholder="+380**-000-00-00" />
+
+<br>
+                        <label for="use_mail">Почта</label>
+                        <input type="mail" name="mail" id="use_mail"  placeholder="Ivan@Ivanov.com"/>
+
+<br>
+                        <label for="use_feedback">Комментарий</label>
+                        <textarea name="feedback" id="feedback" cols="30" rows="10" placeholder="Введите текст"></textarea>
+
+<br>
+                        <button type="submit">Отправить </button>
+                    </form>
                 </div>
             </div>
 
