--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
                             <a href="">Условия договора</a>
                         </label>
                         <br>
-                        <button type="submit" class=" btn-modal">Отправить </button>
+                        <button type="submit" class="btn btn-modal">Отправить </button>
                     </form>
                                
                           
