--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
                                 class="modal-input" required />
                                 <label for="use_name" class="modal-lable">Имя</label>
                                 <svg class="modal-icon" width="18" height="18" >
-                                    <use href="./img/icon.svg"></use>
+                                    <use href="./img/icon.svg#icon-email" class="icon-email"></use>
                                 </svg>
                             </li>
                             <li class="modal-form-list-title">
