--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
                 
             </footer>
             <!-- Backdrop-modal -->
-             <div class="backdrop .is-hidden" data-modal> <!--.is-hidden -->
+             <div class="backdrop " data-modal> <!--.is-hidden -->
                 <div class="modal">
                     <button class="button-close" data-modal-close>
                         <svg class="icon-close" width="18" height="18">
@@ -489,10 +489,17 @@
                                 <input type="tel" name="tel" id="use_tel" placeholder="+380**-000-00-00" 
                                 class="modal-input" required />
                                 <label for="use_tel" class="modal-lable">Телефон</label>
+                                <svg class="modal-icon" width="18" height="18" >
+                                    <use href="./img/icon.svg#icon-email" class="icon-email"></use>
+                                </svg>
+
                             </li>
                             <li class="modal-form-list-title">
                                 <input type="email" name="mail" id="use_mail" placeholder="Ivan@Ivanov.com" class="modal-input" required />
                                 <label for="use_mail" class="modal-lable">Почта</label>
+                                <svg class="modal-icon" width="18" height="18" >
+                                    <use href="./img/icon.svg#icon-email" class="icon-email"></use>
+                                </svg>
                             </li>
                         </ul>
                             <div class="modal-form-list-title">
@@ -513,7 +520,7 @@
                 </div>
             </div>
 
-            <script src="./js/modal.js"></script>  
+            <!-- <script src="./js/modal.js"></script>   -->
         </body>
     </html>
 
