--- a/index.html
+++ b/index.html
@@ -482,30 +482,30 @@
                                 class="modal-input" required />
                                 <label for="use_name" class="modal-lable">Имя</label>
                                 <svg class="modal-icon" width="18" height="18" >
-                                    <use href="./img/icon.svg#icon-email" class="icon-email"></use>
+                                    <use href="./img/icon.svg#icon-person-black" ></use>
                                 </svg>
                             </li>
                             <li class="modal-form-list-title">
-                                <input type="tel" name="tel" id="use_tel" placeholder="+380**-000-00-00" 
+                                <input type="tel" name="tel" id="use_tel" 
                                 class="modal-input" required />
                                 <label for="use_tel" class="modal-lable">Телефон</label>
                                 <svg class="modal-icon" width="18" height="18" >
-                                    <use href="./img/icon.svg#icon-email" class="icon-email"></use>
+                                    <use href="./img/icon.svg#icon-phone-black" ></use>
                                 </svg>
 
                             </li>
                             <li class="modal-form-list-title">
-                                <input type="email" name="mail" id="use_mail" placeholder="Ivan@Ivanov.com" class="modal-input" required />
+                                <input type="email" name="mail" id="use_mail"  class="modal-input" required />
                                 <label for="use_mail" class="modal-lable">Почта</label>
                                 <svg class="modal-icon" width="18" height="18" >
-                                    <use href="./img/icon.svg#icon-email" class="icon-email"></use>
+                                    <use href="./img/icon.svg#icon-email" ></use>
                                 </svg>
                             </li>
                         </ul>
-                            <div class="modal-form-list-title">
-                                <textarea name="feedback" id="feedback" cols="30" rows="10" 
-                                placeholder="Введите текст"  ></textarea>
-                                <label for="use_feedback" >Комментарий</label> <!--class="modal-lable"-->
+                            <div class="modal-form-textarea">
+                                <textarea name="feedback" id="feedback" cols="30" rows="5" 
+                                placeholder="Введите текст"  class="modal-textarea"></textarea>
+                                <label for="use_feedback" class="modal-lable-textarea">Комментарий</label> <!--class="modal-lable"-->
                             </div>
 
                         
