--- a/index.html
+++ b/index.html
@@ -511,8 +511,8 @@
                         
                         <label class="modal-checkbox">
                             <input type="checkbox" class="modal-checkbox-title">
-                            Соглашаюсь с рассылкой и принимаю
-                            <a href="">Условия договора</a>
+                            <p class="modal-checkbox-title-par">Соглашаюсь с рассылкой и принимаю</p>
+                            <a href="" class="modal-checkbox-title-link">Условия договора</a>
                         </label>
                         
                         <button type="submit" class="btn btn-modal">Отправить </button>
