--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
                     </div>
                     <div class="footer-form-conteiner">
                         <p class="footer-form-tittle">Подпишитесь на рассылку</p>
-                        <form class="footer-form">
+                        <form name="signup_form" autocomplete="on" novalidate class="footer-form">
                             <label >
                                 <input type="mail" name="mail"  placeholder="Email"  class="footer-input" required>
                             </lable>
@@ -466,7 +466,7 @@
                 
             </footer>
             <!-- Backdrop-modal -->
-             <div class="backdrop " data-modal> <!--.is-hidden -->
+             <div class="backdrop is-hidden" data-modal> <!--.is-hidden -->
                 <div class="modal">
                     <button class="button-close" data-modal-close>
                         <svg class="icon-close" width="18" height="18">
@@ -520,7 +520,7 @@
                 </div>
             </div>
 
-            <!-- <script src="./js/modal.js"></script>   -->
+            <script src="./js/modal.js"></script>   
         </body>
     </html>
 
