--- a/index.html
+++ b/index.html
@@ -449,11 +449,12 @@
                                 <input type="mail" name="mail"  placeholder="Email"  class="footer-input" required>
                             </lable>
                                 <button type="submit" class="footer-form-btn btn">Подписаться
-                                    <svg class="icon-send" width="20" height="20" fill="white">
-                                        <use src="./img/icon.svg#icon-pen" class="icon-pen"></use>
-                                    </svg>
+                                    <div class="f-icon-conteiner">
+                                        <svg class="icon-send" width="24" height="24">
+                                            <use href="./img/icon.svg#icon-icon-send"></use>
+                                        </svg>
+                                    </div>
                                 </button>
-                                
                         </form>
                     </div>
                 </div>
