--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
                             <label >
                                 <input type="mail" name="mail"  placeholder="Email"  class="footer-input" required>
                             </lable>
-                                <button type="submit" class="footer-form-btn btn">Подписаться
+                                <button type="submit" class="footer-form-btn ">Подписаться
                                     <div class="f-icon-conteiner">
                                         <svg class="icon-send" width="24" height="24">
                                             <use href="./img/icon.svg#icon-icon-send"></use>
@@ -461,7 +461,7 @@
                 
             </footer>
             <!-- Backdrop-modal -->
-             <div class="backdrop is-hidden" data-modal> <!--.is-hidden -->
+             <div class="backdrop .is-hidden" data-modal> <!--.is-hidden -->
                 <div class="modal">
                     <button class="button-close" data-modal-close>
                         <svg class="icon-close" width="18" height="18">
@@ -506,6 +506,7 @@
                         
                         <label class="modal-checkbox">
                             <input type="checkbox" class="modal-checkbox-title">
+                            <span class="checkbox-icon"></span>
                             <p class="modal-checkbox-title-par">Соглашаюсь с рассылкой и принимаю</p>
                             <a href="" class="modal-checkbox-title-link">Условия договора</a>
                         </label>
@@ -515,7 +516,7 @@
                 </div>
             </div>
 
-            <script src="./js/modal.js"></script>   
+           <script src="./js/modal.js"></script> 
         </body>
     </html>
 
