--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
                 
             </footer>
             <!-- Backdrop-modal -->
-             <div class="backdrop .is-hidden" data-modal> <!--.is-hidden -->
+             <div class="backdrop is-hidden" data-modal> <!--.is-hidden -->
                 <div class="modal">
                     <button class="button-close" data-modal-close>
                         <svg class="icon-close" width="18" height="18">
