--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
                             </div>
                         
                             <div class="modal-form-textarea">
-                                <label for="use_feedback" class="modal-lable-textarea">Комментарий</label> <!--class="modal-lable"-->
+                                <label for="use_feedback" class="modal-lable">Комментарий</label> <!--class="modal-lable"-->
                                 <textarea name="feedback" id="feedback" cols="30" rows="5" 
                                 placeholder="Введите текст"  class="modal-textarea"></textarea>
                             </div>
