--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
                                 <label for="use_tel" class="modal-lable">Телефон</label>
                                 <input type="tel" name="tel" id="use_tel" class="modal-input" required />
                                 <svg class="modal-icon" width="18" height="18" >
-                                    <use href="./img/icon.svg#icon-phone-black" ></use>
+                                    <use href="./img/icon.svg#icon-phone-black"  class="icon"></use>
                                 </svg>
                             </div>
                             <div class="modal-form-list-title">
