--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <nav class="nav">
                         <!--Logo nav-->
                         <a href="./index.html" class="logo link nav-logo">Web
-                            <span class="logo-var">Studio</span></a>
+                            <span class="logo--header">Studio</span></a>
                         <ul class=" nav-list list">
                             <li class="nav-list-item">
                                 <a href="./index.html" class="list-item active link n-link">Студия</a>
@@ -390,7 +390,7 @@
                 <div class="conteiner soc-conteiner">
                     <!--Logo nav-->
                     <div class="footer-logo-conteiner">
-                            <a href="./index.html" class="logo link f-logo">Web
+                            <a href="./index.html" class="logo link .logo--footer">Web
                                 <span class="logo-footer">Studio</span></a>
                         
                         <address class="address">
