--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="conteiner header-conteiner">
                     <nav class="nav">
                         <!--Logo nav-->
-                        <a href="./index.html" class="logo link nav-logo">Web
+                        <a href="./index.html" class="logo link ">Web
                             <span class="logo-var">Studio</span></a>
                         <ul class=" nav-list list">
                             <li class="nav-list-item">
